--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!-- footer -->
 <div class="row text-center">
 
-  <p><a href="url">https://github.com/isabellerushing/improved-octo-giggle-charlie</a> | link to story card | <a href="url">https://github.com/isabellerushing</a></p>
+  <p><a href="url">https://github.com/isabellerushing/improved-octo-giggle-charlie</a> | link to story card | <a href="url">github.com/isabellerushing</a></p>
 
 </div>
 
